# catch-adapter

./: CMakeLists.txt  README.md
.metaconfigure/: description.json
metaconfigure/: description.json
src/single_include/: catch.hpp
